# docker-job-dispatcher

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: cleaner.rs  default_filter.jq  docker.rs  docker_service.rs  health_service.rs  main.rs  metrics_service.rs  openapi.json  scheduler.rs
