[package]
name = "docker-job-dispatcher"
version = "0.2.1"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
bollard = { version = "0.15.0", features = ["ssl", "chrono"] }
clap = { version = "4.4.10", features = ["env", "derive"] }
cuid2 = "0.1.2"
futures = "0.3.29"
itertools = "0.12.0"
jaq-core = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
jaq-interpret = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
jaq-parse = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
jaq-std = { git = "https://github.com/01mf02/jaq.git", tag = "v1.2.0" }
md5 = "0.7.0"
once_cell = "1.18.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
tokio = { version = "1.34.0", features = ["rt", "macros", "time", "sync"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
