[package]
name = "docker-job-dispatcher"
version = "0.4.1"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
anyhow = "1.0.86"
bollard = { version = "0.16.1", features = ["ssl", "chrono"] }
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["env", "derive"] }
cuid2 = "0.1.2"
futures = "0.3.30"
itertools = "0.13.0"
jaq-core = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
jaq-interpret = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
jaq-parse = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
jaq-std = { git = "https://github.com/01mf02/jaq.git", tag = "v1.4.0" }
md5 = "0.7.0"
once_cell = "1.19.0"
prometheus-client = "0.22.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
utoipa-rapidoc = { version = "4.0.0", features = ["actix-web"] }
